Closed
Bug 776745
Opened 13 years ago
Closed 13 years ago
[b2g-bluetooth] Crash in bluetooth discovery due to initializer buried in NS_ASSERTION
Categories
(Core :: DOM: Device Interfaces, defect)
Tracking
()
RESOLVED
FIXED
mozilla17
People
(Reporter: qdot, Assigned: qdot)
References
Details
Attachments
(1 file)
691 bytes,
patch
|
gwagner
:
review+
|
Details | Diff | Splinter Review |
When a DeviceFound message is handled by BluetoothDBusService.cpp's EventLoop function, the dbus iterator is wrapped in an NS_ASSERTION, meaning that it won't get called at all if it's being built in release. This causes very weird crashes.
Assignee | ||
Comment 1•13 years ago
|
||
Attachment #645109 -
Flags: review?(mrbkap)
Assignee | ||
Updated•13 years ago
|
Attachment #645109 -
Flags: review?(mrbkap) → review?(anygregor)
Updated•13 years ago
|
Attachment #645109 -
Flags: review?(anygregor) → review+
Comment 2•13 years ago
|
||
FWIW, you can use MOZ_ASSERT_ALWAYS_TRUE for that. This is going to assert if the expression is false in debug build but will still run the expression in release builds.
Assignee | ||
Comment 3•13 years ago
|
||
Target Milestone: --- → mozilla17
Comment 4•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•