Fix DeviceFound crash (bug 776745)