dom/bluetooth/linux/BluetoothDBusService.cpp
@@ -562,8 +562,10 @@ EventFilter(DBusConnection* aConn, DBusMessage* aMsg, void* aData)
 
     DBusMessageIter iter;
 
-    NS_ASSERTION(dbus_message_iter_init(aMsg, &iter),
-                 "Can't create message iterator!");
+    if (!dbus_message_iter_init(aMsg, &iter)) {
+      NS_WARNING("Can't create iterator!");
+      return DBUS_HANDLER_RESULT_NOT_YET_HANDLED;
+    }
 
     const char* addr;
     dbus_message_iter_get_basic(&iter, &addr);
